--- a/portfoliowebsite.html
+++ b/portfoliowebsite.html
@@ -9,9 +9,10 @@
 <!--Navigation Start-->
         <div class="navbar">
             <a class="active" href="#home">Home</a>
+            <a href="#slideshow">Slideshow</a>
             <a href="#about">About</a>
             <a href="#github">GitHub</a>
-            <a href="#contact">Contact</a>
+            <a onclick="openForm()" ondblclick="closeForm()" class="contact">Contact</a>
         </div>
 <!--Navigation End-->
 <!--Home Start-->
@@ -29,6 +30,58 @@
             </strong>
         </div>
 <!--Home End-->
+<!--Slideshow Start-->
+        <div id="slideshow">
+            <div id="Slideshow_Background"> 
+                <div id="Slideshow_Container">
+                    <!--Slide 1/6-->
+                    <div class="mySlides fade">
+                        <img class="Slideshow_Images" src="./images/image1.jpg" alt="Picture of Myself">
+                        <div class="text">I'm available to assist you on your project!</div>
+                    </div>
+                    <!--Slide 2/6-->
+                    <div class="mySlides fade">
+                        <img class="Slideshow_Images" src="./images/image2.jpeg" alt="HTML, CSS, and JS logos"> 
+                        <div class="text">I am a full-stack software developer,<br> trained in:<br>HTML, CSS, JavaScript,</div>
+                    </div>
+                    <!--Slide 3/6-->
+                    <div class="mySlides fade">
+                        <img class="Slideshow_Images" src="./images/image3.png" alt="Python logo">
+                        <div class="text">the popular programming language Python,</div>
+                    </div>
+                    <!--Slide 4/6-->
+                    <div class="mySlides fade">
+                        <img class="Slideshow_Images" src="./images/image4.png" alt="C# logo">
+                        <div class="text">C#, .NET Framework, ASP.NET, MVC, </div>
+                    </div>
+                    <!--Slide 5/6-->
+                    <div class="mySlides fade">
+                        <img class="Slideshow_Images" src="./images/image5.jpg" alt="SQL logo"> 
+                        <div class="text">back end development, databases and SQL.</div>
+                    </div>
+                    <!--Slide 6/6-->
+                    <div class="mySlides fade">
+                        <img class="Slideshow_Images" src="./images/image6.jpg" alt="Closing Photo"> 
+                        <div class="text"><a class="white-text contact" onclick="openForm()">Contact Me!</a></div> 
+                    </div>
+                    <!--Previous and next buttons-->
+                    <a class="Previous" onclick="plusSlides(-1)">&#10094;</a>
+                    <a class="Next" onclick="plusSlides(1)">&#10095;</a>
+                </div>
+                <br> <!--Adds a space between the slideshow images and the dots-->
+
+                <!--Slideshow dots (these are another way for users to navigate through the slideshow)-->
+                <div style="text-align: center">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span> 
+                    <span class="dot" onclick="currentSlide(4)"></span> 
+                    <span class="dot" onclick="currentSlide(5)"></span> 
+                    <span class="dot" onclick="currentSlide(6)"></span> 
+                </div>
+            </div>
+        </div>
+<!--Slideshow End-->
 <!--About Start-->
         <div class="row" id="about">
             <div class="column_2">
@@ -37,15 +90,11 @@
             <div class="column_3"> 
                 <h1>About</h1>
                 <p>
-                    I am a software developer with a passion for coding.
-                    <br><br>
                     My experience in the industry includes being a graduate of <a href="https://www.learncodinganywhere.com/">The Tech Academy</a>’s 
                     Software Developer Boot Camp, having been trained in the following web and programming languages: HTML, CSS, JavaScript, 
                     SQL, C# and more.
                     <br><br>
-                    I am a full-stack developer and would love to work with you on your project. 
-                    <br><br>
-                    <a href="#contact">Contact</a> me below!
+                    I am a full-stack developer and would love to work with you on your project. <a href="#contact">Contact</a> me below!
                 </p>
             </div>
         </div>
@@ -68,20 +117,22 @@
         </div>
 <!--GitHub End-->
 <!--Contact Start-->
-        <div class="row" id="contact">
-            <div class="column_2 column-tall">
-                <img src="./images/contact.png" alt="contactimage">
-            </div>
-            <div class="column_1 column_tall">
-                <h1>Contact</h1>
-                <form action="" method="post">
-                    <label>Name:</label>
-                    <input class="rsvp" type="text" value="" placeholder="Please enter your name here">
-                    <label>Email:</label>
-                    <input class="rsvp" type="text" value="" placeholder="Please enter your email address here">
-                    <label>Message:</label>
-                    <input class="rsvp" type="text" value="" placeholder="Please write your message here">
-                    <input type="submit" value="Submit">
+        <div id="contact">
+            <button onclick="openForm()" class="Pop_Up_Button">Contact</button>
+            <div class="form-popup" id="myForm">
+                <form action="https://formspree.io/info@learncodinganywhere.com" method="POST" class="form-container"> <!-- Here we are using a free online service from https://formspree.io/ to send our contact form to an email address of our choosing - note: it will not run unless live on the internet, you have to push it to your online website first -->
+                    <h1>Contact</h1>
+                    <label for="name"><b>Name</b></label>
+                        <input type="text" placeholder="Type your name here" name="name" required>
+                    <label for="phone"><b>Phone</b></label>
+                        <input type="text" placeholder="Type your phone number here" name="phone">
+                    <label for="email"><b>Email</b></label>		
+                        <input type="text" placeholder="Type your email address here" name="email" required>
+                    <label for="message"><b>Message</b></label>
+                        <input type="text" placeholder="Type your message here" name="message">
+        
+                    <button type="submit" class="btn">Submit</button>
+                    <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
                 </form>
             </div>
         </div>
@@ -93,5 +144,6 @@
             </p>
         </footer>
 <!--Footer End-->
+        <script src="./js/portfoliowebsite.js"></script>
     </body>
 </html>
